// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Model Serialization Service UT serialize() should serialize a non-empty app 1`] = `
{
  "anchors": [],
  "dependencies": [
    {
      "behaviors": [
        {
          "forAction": "delete",
          "onAction": "delete",
          "onField": "name",
          "toField": "imageId",
        },
      ],
      "from": "app=test-app",
      "relationship": {
        "onField": "name",
        "toField": "imageId",
        "type": "parent",
      },
      "to": "image=image:0.0.1,app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "delete",
          "onAction": "delete",
          "onField": "name",
          "toField": "regionId",
        },
      ],
      "from": "app=test-app",
      "relationship": {
        "onField": "name",
        "toField": "regionId",
        "type": "parent",
      },
      "to": "region=region-1,app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "delete",
          "onAction": "delete",
          "onField": "name",
          "toField": "serverKey",
        },
      ],
      "from": "app=test-app",
      "relationship": {
        "onField": "name",
        "toField": "serverKey",
        "type": "parent",
      },
      "to": "server=backend,app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "delete",
          "onAction": "delete",
          "onField": "name",
          "toField": "serverKey",
        },
      ],
      "from": "app=test-app",
      "relationship": {
        "onField": "name",
        "toField": "serverKey",
        "type": "parent",
      },
      "to": "support=nginx,app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "add",
          "onAction": "add",
          "onField": "serverKey",
          "toField": "name",
        },
        {
          "forAction": "update",
          "onAction": "add",
          "onField": "serverKey",
          "toField": "name",
        },
      ],
      "from": "support=nginx,app=test-app",
      "relationship": {
        "onField": "serverKey",
        "toField": "name",
        "type": "child",
      },
      "to": "app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "add",
          "onAction": "add",
          "onField": "serverKey",
          "toField": "imageId",
        },
        {
          "forAction": "update",
          "onAction": "add",
          "onField": "serverKey",
          "toField": "imageId",
        },
      ],
      "from": "server=backend,app=test-app",
      "relationship": undefined,
      "to": "image=image:0.0.1,app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "add",
          "onAction": "add",
          "onField": "serverKey",
          "toField": "name",
        },
        {
          "forAction": "update",
          "onAction": "add",
          "onField": "serverKey",
          "toField": "name",
        },
      ],
      "from": "server=backend,app=test-app",
      "relationship": {
        "onField": "serverKey",
        "toField": "name",
        "type": "child",
      },
      "to": "app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "add",
          "onAction": "add",
          "onField": "imageId",
          "toField": "name",
        },
        {
          "forAction": "update",
          "onAction": "add",
          "onField": "imageId",
          "toField": "name",
        },
      ],
      "from": "image=image:0.0.1,app=test-app",
      "relationship": {
        "onField": "imageId",
        "toField": "name",
        "type": "child",
      },
      "to": "app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "delete",
          "onAction": "delete",
          "onField": "imageId",
          "toField": "serverKey",
        },
      ],
      "from": "image=image:0.0.1,app=test-app",
      "relationship": undefined,
      "to": "server=backend,app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "add",
          "onAction": "add",
          "onField": "regionId",
          "toField": "name",
        },
        {
          "forAction": "update",
          "onAction": "add",
          "onField": "regionId",
          "toField": "name",
        },
      ],
      "from": "region=region-1,app=test-app",
      "relationship": {
        "onField": "regionId",
        "toField": "name",
        "type": "child",
      },
      "to": "app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "delete",
          "onAction": "delete",
          "onField": "regionId",
          "toField": "environmentName",
        },
      ],
      "from": "region=region-1,app=test-app",
      "relationship": {
        "onField": "regionId",
        "toField": "environmentName",
        "type": "parent",
      },
      "to": "environment=qa,region=region-1,app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "add",
          "onAction": "add",
          "onField": "environmentName",
          "toField": "regionId",
        },
        {
          "forAction": "update",
          "onAction": "add",
          "onField": "environmentName",
          "toField": "regionId",
        },
      ],
      "from": "environment=qa,region=region-1,app=test-app",
      "relationship": {
        "onField": "environmentName",
        "toField": "regionId",
        "type": "child",
      },
      "to": "region=region-1,app=test-app",
    },
  ],
  "models": {
    "app=test-app": {
      "className": "App",
      "model": {
        "name": "test-app",
      },
    },
    "environment=qa,region=region-1,app=test-app": {
      "className": "Environment",
      "model": {
        "environmentName": "qa",
        "environmentVariables": {
          "key": "value",
        },
      },
    },
    "image=image:0.0.1,app=test-app": {
      "className": "Image",
      "model": {
        "dockerOptions": {
          "buildArgs": {},
          "dockerfilePath": "/Dockerfile",
          "quiet": undefined,
        },
        "imageId": "0.0.1",
        "imageName": "image",
        "imageTag": "0.0.1",
      },
    },
    "region=region-1,app=test-app": {
      "className": "Region",
      "model": {
        "regionId": "region-1",
      },
    },
    "server=backend,app=test-app": {
      "className": "Server",
      "model": {
        "image": {
          "context": "image=image:0.0.1,app=test-app",
        },
        "serverKey": "backend",
      },
    },
    "support=nginx,app=test-app": {
      "className": "Support",
      "model": {
        "applicationType": "nginx",
        "serverKey": "nginx",
      },
    },
  },
  "modules": [],
}
`;

exports[`Model Serialization Service UT serialize() should serialize an empty app 1`] = `
{
  "anchors": [],
  "dependencies": [],
  "models": {
    "app=test-app": {
      "className": "App",
      "model": {
        "name": "test-app",
      },
    },
  },
  "modules": [],
}
`;

exports[`Model Serialization Service UT serialize() should serialize only boundary members 1`] = `
{
  "anchors": [],
  "dependencies": [
    {
      "behaviors": [
        {
          "forAction": "add",
          "onAction": "add",
          "onField": "regionId",
          "toField": "name",
        },
        {
          "forAction": "update",
          "onAction": "add",
          "onField": "regionId",
          "toField": "name",
        },
      ],
      "from": "region=region-1,app=test-app",
      "relationship": {
        "onField": "regionId",
        "toField": "name",
        "type": "child",
      },
      "to": "app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "delete",
          "onAction": "delete",
          "onField": "regionId",
          "toField": "environmentName",
        },
      ],
      "from": "region=region-1,app=test-app",
      "relationship": {
        "onField": "regionId",
        "toField": "environmentName",
        "type": "parent",
      },
      "to": "environment=qa,region=region-1,app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "delete",
          "onAction": "delete",
          "onField": "name",
          "toField": "regionId",
        },
      ],
      "from": "app=test-app",
      "relationship": {
        "onField": "name",
        "toField": "regionId",
        "type": "parent",
      },
      "to": "region=region-1,app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "add",
          "onAction": "add",
          "onField": "environmentName",
          "toField": "regionId",
        },
        {
          "forAction": "update",
          "onAction": "add",
          "onField": "environmentName",
          "toField": "regionId",
        },
      ],
      "from": "environment=qa,region=region-1,app=test-app",
      "relationship": {
        "onField": "environmentName",
        "toField": "regionId",
        "type": "child",
      },
      "to": "region=region-1,app=test-app",
    },
  ],
  "models": {
    "app=test-app": {
      "className": "App",
      "model": {
        "name": "test-app",
      },
    },
    "environment=qa,region=region-1,app=test-app": {
      "className": "Environment",
      "model": {
        "environmentName": "qa",
        "environmentVariables": {},
      },
    },
    "region=region-1,app=test-app": {
      "className": "Region",
      "model": {
        "regionId": "region-1",
      },
    },
  },
  "modules": [],
}
`;

exports[`Model Serialization Service UT serialize() should serialize when multiple models have dependency on same model 1`] = `
{
  "anchors": [],
  "dependencies": [
    {
      "behaviors": [
        {
          "forAction": "delete",
          "onAction": "delete",
          "onField": "name",
          "toField": "imageId",
        },
      ],
      "from": "app=test-app",
      "relationship": {
        "onField": "name",
        "toField": "imageId",
        "type": "parent",
      },
      "to": "image=image:0.0.1,app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "delete",
          "onAction": "delete",
          "onField": "name",
          "toField": "serverKey",
        },
      ],
      "from": "app=test-app",
      "relationship": {
        "onField": "name",
        "toField": "serverKey",
        "type": "parent",
      },
      "to": "server=server-0,app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "delete",
          "onAction": "delete",
          "onField": "name",
          "toField": "serverKey",
        },
      ],
      "from": "app=test-app",
      "relationship": {
        "onField": "name",
        "toField": "serverKey",
        "type": "parent",
      },
      "to": "server=server-1,app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "add",
          "onAction": "add",
          "onField": "serverKey",
          "toField": "imageId",
        },
        {
          "forAction": "update",
          "onAction": "add",
          "onField": "serverKey",
          "toField": "imageId",
        },
      ],
      "from": "server=server-1,app=test-app",
      "relationship": undefined,
      "to": "image=image:0.0.1,app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "add",
          "onAction": "add",
          "onField": "serverKey",
          "toField": "name",
        },
        {
          "forAction": "update",
          "onAction": "add",
          "onField": "serverKey",
          "toField": "name",
        },
      ],
      "from": "server=server-1,app=test-app",
      "relationship": {
        "onField": "serverKey",
        "toField": "name",
        "type": "child",
      },
      "to": "app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "add",
          "onAction": "add",
          "onField": "imageId",
          "toField": "name",
        },
        {
          "forAction": "update",
          "onAction": "add",
          "onField": "imageId",
          "toField": "name",
        },
      ],
      "from": "image=image:0.0.1,app=test-app",
      "relationship": {
        "onField": "imageId",
        "toField": "name",
        "type": "child",
      },
      "to": "app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "delete",
          "onAction": "delete",
          "onField": "imageId",
          "toField": "serverKey",
        },
      ],
      "from": "image=image:0.0.1,app=test-app",
      "relationship": undefined,
      "to": "server=server-0,app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "delete",
          "onAction": "delete",
          "onField": "imageId",
          "toField": "serverKey",
        },
      ],
      "from": "image=image:0.0.1,app=test-app",
      "relationship": undefined,
      "to": "server=server-1,app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "add",
          "onAction": "add",
          "onField": "serverKey",
          "toField": "imageId",
        },
        {
          "forAction": "update",
          "onAction": "add",
          "onField": "serverKey",
          "toField": "imageId",
        },
      ],
      "from": "server=server-0,app=test-app",
      "relationship": undefined,
      "to": "image=image:0.0.1,app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "add",
          "onAction": "add",
          "onField": "serverKey",
          "toField": "name",
        },
        {
          "forAction": "update",
          "onAction": "add",
          "onField": "serverKey",
          "toField": "name",
        },
      ],
      "from": "server=server-0,app=test-app",
      "relationship": {
        "onField": "serverKey",
        "toField": "name",
        "type": "child",
      },
      "to": "app=test-app",
    },
  ],
  "models": {
    "app=test-app": {
      "className": "App",
      "model": {
        "name": "test-app",
      },
    },
    "image=image:0.0.1,app=test-app": {
      "className": "Image",
      "model": {
        "dockerOptions": {
          "buildArgs": {},
          "dockerfilePath": "/Dockerfile",
          "quiet": undefined,
        },
        "imageId": "0.0.1",
        "imageName": "image",
        "imageTag": "0.0.1",
      },
    },
    "server=server-0,app=test-app": {
      "className": "Server",
      "model": {
        "image": {
          "context": "image=image:0.0.1,app=test-app",
        },
        "serverKey": "server-0",
      },
    },
    "server=server-1,app=test-app": {
      "className": "Server",
      "model": {
        "image": {
          "context": "image=image:0.0.1,app=test-app",
        },
        "serverKey": "server-1",
      },
    },
  },
  "modules": [],
}
`;
